--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -7,8 +7,11 @@
     <uses-sdk
         android:minSdkVersion="15"
         android:targetSdkVersion="21" />
-<uses-permission android:name="android.permission.READ_CALL_LOG"/>  
-<uses-permission android:name="android.permission.WRITE_CALL_LOG"/>
+
+    <uses-permission android:name="android.permission.READ_CALL_LOG" />
+    <uses-permission android:name="android.permission.WRITE_CALL_LOG" />
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
